fix collapsemenu equipements li create img slideshow productpage style

--- a/kasa/src/styles/main.sass
+++ b/kasa/src/styles/main.sass
@@ -125,6 +125,10 @@ header
             margin: 0
             color: white
 
+.about-page
+    width: 100%
+    padding: 0 10%
+
 .product-page
     display: flex
     flex-direction: column
@@ -140,14 +144,28 @@ header
         ul
             flex-direction: row
             justify-content: space-between
+            align-items: baseline
             gap: 76px
         .collapse-container
-            height: 52px
+            height: auto
             li
                 width: 100%
             h2
                 padding: 10px
                 font-size: 18px
+        .collapse-content
+            ul
+                display: block
+                padding: 16px 20px
+            li
+                background: none
+                margin: 0
+                height: auto
+                font-size: 18px
+                line-height: 25px
+            p
+                font-size: 18px
+                line-height: 25px
 
 .product-info
     display: flex
@@ -212,6 +230,44 @@ header
 .star-active
     color: #FF6060
 
+.slider
+    position: relative
+    display: flex
+    justify-content: center
+    align-items: center
+    img
+        object-fit: cover
+
+.slider-prev
+    position: absolute
+    left: 0
+    top: 50%
+    transform: translateY(-50%)
+    border: none
+    background: none
+    cursor: pointer
+    color: white
+    font-size: 80px
+
+.slider-next
+    position: absolute
+    right: 0
+    top: 50%
+    transform: translateY(-50%)
+    border: none
+    background: none
+    cursor: pointer
+    color: white
+    font-size: 80px
+
+.index-indicator
+    position: absolute
+    bottom: 10px
+    left: 50%
+    transform: translateX(-50%)
+    color: white
+    font-size: 18px
+    z-index: 1
 
 .collapse-menu
     display: flex
@@ -236,7 +292,7 @@ header
         height: 54px
         background-color: #FF6060
         border-radius: 5px
-        width: 70%
+        width: 100%
         h2
             margin: 0
             padding: 10px 0 8px 15px
@@ -249,10 +305,13 @@ header
             padding: 11px 20px 9px 0
 
 .collapse-content
+    display: flex
     background-color: #f8f8f8
-    width: 70%
+    width: 100%
+    height: 100%
+    min-height: 150px
     p
-        padding: 20px
+        padding: 16px 20px
         margin: 0
 .collapse-container
     display: flex
